0.4.3
=====

Fixed matching when there's a list of expressions and a list of stat names.

0.4.2
=====

Include command line arguments when changing process title

0.4.1
=====

Adds "rolling" option to schemas, allowing data to be inserted into multiple
intervals at a time. This increases storage space but supports rapid
calculation of aggregates over pre-determined interval ranges.

0.4.0
=====

Stat queries can be comma-separated values to join multiple timeseries.

Added "collapse" parameter to "/series" which supports collapsing all of the
data in the date range into a single result. This supports easy computation of
aggregates across a time range, such as "maximum value in the last 7 days".

Schemas can include "TRANSFORMS" stanza for defining a named map of data 
transforms that will be used when querying torus.

Adding hiredis requirement as redis is not performant enough without it.

Rename torus and karbon processes for easy "kill -SIGHUP `pidof karbon`".

Configuration files can include "DEBUG" stanza for turning on debug logging.
Debugging output currently only implemented in karbon. See the "Debugging"
section in the README for details.

Renamed command line argument "--schema" to "--config" to better reflect the
nature of the files.

0.3.3
=====

Result of "/series" now includes the full stat name and its function in the
'stat' field. Added 'stat_name' field in results.

0.3.2
=====

Fixed handling of "start" and "end" parameters to "/series"

0.3.1
=====

Fixed handling of "condensed" and "interval" parameters to "/series"

0.3.0
=====

Upgrade to kairos 0.3.0, adds support for Gregorian dates and date ranges
to "/series"

Adds support for UNIX timestamps or parsedatetime-compatible strings for
'start' and 'end' parameters to "/series"

Adds support for 'steps' parameter to "/series"

0.2.1
=====

Fix bug in detecting recursion when processing aggregates

0.2.0
=====

Added support for Mongo backends via latest kairos
