@@ -1,5 +1,5 @@
 # latest kairos
-kairos>=0.4.2
+kairos>=0.6.2
 
 # latest redis
 redis>=2.7.5
