@@ -1,3 +1,12 @@
+macros
+======
+
+Renamed "condensed" parameter in "/series" to "condense" to match 
+latest kairos.
+
+Added support for macros, which are the basis for exposing kairos' custom
+read functionality.
+
 0.4.3
 =====
 
